# asanable

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/asanable/: __init__.py  __main__.py  config.py  constants.py  errors.py  main.py
src/asanable/clients/: asana_client.py  gmail_client.py
src/asanable/commands/: init_command.py
src/asanable/domain/: digest.py  email.py  task.py
src/asanable/infrastructure/: cache.py  clock.py
src/asanable/renderers/: cli_renderer.py  html_renderer.py  json_renderer.py  slack_renderer.py  telegram_renderer.py
src/asanable/scheduler/: cron.py
src/asanable/services/: dedup_service.py  digest_service.py  mapper_service.py  priority_service.py
tests/factories/: digest_factory.py  email_factory.py  task_factory.py
tests/unit/: test_asana_client.py  test_asana_task.py  test_cache.py  test_cli_renderer.py  test_dedup_service.py  test_digest_service.py  test_gmail_client.py  test_gmail_message.py  test_html_renderer.py  test_init_command.py  test_main.py  test_mapper_service.py  test_priority_service.py  test_scheduler.py  test_slack_renderer.py  test_telegram_renderer.py
