[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asanable"
version = "1.0.0"
description = "Prioritized daily digest for your Asana tasks — overdue, today, this week — straight in your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "asana>=5.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
asanable = "asanable.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asanable"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["asanable"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
